# battery-estimator

./: .gitignore  Cargo.toml  README.md  index.html  tarpaulin-report.html
.github/workflows/: rust.yml
benches/: benchmark.rs
dev/bench/: data.js
examples/: basic.rs  custom_curve.rs  fixed_point_example.rs  precise_test.rs  temperature_compensation_test.rs
src/: compensation.rs  curve.rs  error.rs  estimator.rs  fixed_point.rs  lib.rs  types.rs
