[package]
name = "battery-estimator"
version = "0.2.1"
edition = "2021"
rust-version = "1.83"
description = "A lightweight no_std library for estimating battery SOC from voltage with temperature and aging compensation"
readme = "README.md"
repository = "https://github.com/KingingWang/battery-estimator"
license = "MIT"
keywords = ["battery", "soc", "no-std", "voltage", "level"]
categories = ["embedded", "no-std"]
authors = ["kingingwang@foxmail.com"]

[dependencies]
thiserror = { version = "2", default-features = false }

[features]
default = []
