[package]
name = "battery-estimator"
version = "0.3.2"
edition = "2021"
rust-version = "1.86"
description = "A lightweight no_std library for estimating battery SOC from voltage with temperature and aging compensation"
readme = "README.md"
repository = "https://github.com/KingingWang/battery-estimator"
license = "MIT"
keywords = ["battery", "soc", "no-std", "embedded", "fixed-point"]
categories = ["embedded", "no-std"]
authors = ["kingingwang@foxmail.com"]

[dependencies]
fixed = { version = "1.28", default-features = false }
typenum = { version = "1.17", default-features = false }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false

[features]
default = []